@@ -34,13 +34,14 @@ package ch.sisprocom.bogatyr.helper.control;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.util.List;
 
 
 /**
  * Creates a new process and reads standard output and standard error.
  * 
  * @author Stefan Laubenberger
- * @version 20090429
+ * @version 20090504
  */
 public abstract class ControlProcess {
 	private static final int BUFFER = 1024;
@@ -48,13 +49,13 @@ public abstract class ControlProcess {
 	/**
 	 * Creates a new process and reads the standard output and standard error.
 	 *
-	 * @param command to start the process
+	 * @param command arguments to start the process
      * @param outputStream If null, output is discarded
 	 * @param errorStream If null, error is discarded
 	 * @return created process
      * @throws IOException
 	 */
-	public static Process createProcess(final String command, final OutputStream outputStream, final OutputStream errorStream) throws IOException {
+	public static Process createProcess(final List<String> command, final OutputStream outputStream, final OutputStream errorStream) throws IOException {
 		final Process process = createProcess(command);
 
 		readStandardOutput(process, outputStream, errorStream);
@@ -65,15 +66,15 @@ public abstract class ControlProcess {
 	/**
 	 * Creates a new process without reading the standard output and standard error ("fire and forget").
 	 *
-	 * @param command to start the process
+	 * @param command arguments to start the process
 	 * @return created process
      * @throws IOException
 	 */
-	public static Process createProcess(final String command) throws IOException {
+	public static Process createProcess(final List<String> command) throws IOException {
 
-//		ProcessBuilder pb = new ProcessBuilder(command);
-//		final Process process = pb.start();
-		return Runtime.getRuntime().exec(command);
+		ProcessBuilder pb = new ProcessBuilder(command);
+		return pb.start();
+//		return Runtime.getRuntime().exec(command);
 	}
 
 	
